--- a/src/styles.scss
+++ b/src/styles.scss
@@ -645,3 +645,6 @@ html, body {
 * {
   font-family: 'Poppins', sans-serif;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
