--- a/src/app/pages/welcome/components/prompt-store/prompt-store.component.html
+++ b/src/app/pages/welcome/components/prompt-store/prompt-store.component.html
@@ -1,4 +1,4 @@
-<button (click)="handlePromptStore()" type="button" class="btn btn-primary">
+<button type="button" class="btn btn-primary">
   <div class="prefix">
     <img alt="icon prompt store" src="assets/svgs/prompt-store.svg" />
   </div>
