--- a/src/app/pages/flow/components/block/block.component.scss
+++ b/src/app/pages/flow/components/block/block.component.scss
@@ -6,10 +6,30 @@
   text-align: center;
   background: #17234E;
   border-radius: 8px;
-  
+
 
   .name {
     color: white;
     font-weight: 600;
+  }
+
+  &__edit {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    z-index: 1;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: white;
+    border: 1px solid #e7e7e7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 10px;
+      width: 10px;
+    }
   }
 }
